# win64-rs

./: Cargo.toml  README.md  license-apache  license-mit  rust-toolchain.toml  rustfmt.toml
crates/examples/example/: Cargo.toml  README.md
crates/examples/example-sys/: Cargo.toml
crates/examples/example-sys/src/: main.rs
crates/examples/example/src/: main.rs
crates/libs/win64/: Cargo.toml
crates/libs/win64-extra/: Cargo.toml
crates/libs/win64-extra/src/: lib.rs  message.rs
crates/libs/win64-macro/: Cargo.toml
crates/libs/win64-macro/src/: class.rs  lib.rs  message.rs
crates/libs/win64-macro/src/message/: accessors.rs  attributes.rs  from_u32.rs  new.rs  to_raw.rs  variants.rs
crates/libs/win64-sys/: Cargo.toml  README.md
crates/libs/win64-sys/src/: hresult.rs  lib.rs  processthreadsapi.rs  windef.rs  window.rs  winuser.rs
crates/libs/win64/src/: class.rs  core.rs  descriptor.rs  error.rs  flag.rs  handle.rs  lib.rs  safe.rs  types.rs  user.rs
crates/libs/win64/src/core/: handle.rs  point.rs  rect.rs
crates/libs/win64/src/handle/: instance.rs
crates/libs/win64/src/input/: keyboard.rs  mouse.rs
crates/libs/win64/src/input/keyboard/: key.rs  layout.rs
crates/libs/win64/src/message/: pump.rs  thread.rs
crates/libs/win64/src/safe/: handle.rs  procedure.rs  window.rs
crates/libs/win64/src/safe/handle/: window.rs
crates/libs/win64/src/user/: class.rs  cursor.rs  dark.rs  def.rs  descriptor.rs  flag.rs  flags.rs  hdc.rs  hinstance.rs  hwnd.rs  message.rs  message_loop.rs  monitor.rs  procedure.rs  rwh.rs  types.rs  window_class.rs  winmain.rs
crates/libs/win64/src/user/class/: procedure.rs  response.rs
crates/libs/win64/src/user/def/: hwnd.rs
crates/libs/win64/src/user/flags/: peek_message.rs  styles.rs
crates/libs/win64/src/user/hwnd/: paint.rs
crates/libs/win64/src/user/message/: data.rs  get.rs  id.rs  peek.rs  thread.rs  wait.rs
crates/win64/: Cargo.toml
crates/win64/examples/test/: main.rs
crates/win64/src/: descriptor.rs  flag.rs  handle.rs  lib.rs  message.rs  prelude.rs  procedure.rs  types.rs
crates/win64/src/handle/: instance.rs  window.rs
crates/win64/src/message/: data.rs  id.rs  pump.rs  thread.rs
crates/win64_macro/: Cargo.toml
crates/win64_macro/src/: lib.rs
examples/test/: fps.rs  main.rs
src/: class.rs  descriptor.rs  flag.rs  handle.rs  lib.rs  message.rs  prelude.rs  procedure.rs  types.rs  window.rs
src/handle/: instance.rs  window.rs
src/message/: input.rs  keyboard.rs  mouse.rs  pump.rs
