[package]
edition     = "2024"
name        = "win64"
description = "An opinionated modernization of the Win32 windowing library"
version     = "0.0.1"
readme      = "README.md"
keywords    = ["win32", "windows", "windowing"]
categories  = ["game-development", "rendering", "gui"]
authors     = ["Gabriel Lugo <dev.gabriel.lugo@gmail.com>"]
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/GTLugo/win64"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[dependencies]
thiserror = "2.0.x"

bitflags = "2.9.x"
cursor-icon = "1.1.x"

[dependencies.win64-macro]
version = "0.1.0"
path = "../win64_macro"

[dependencies.windows]
version  = "0.60.x"
features = [
  "UI_ViewManagement", 
  "Win32_Devices_HumanInterfaceDevice", 
  "Win32_Foundation", 
  "Win32_Security", 
  "Win32_System_SystemInformation", 
  "Win32_System_Threading", 
  "Win32_UI_Accessibility", 
  "Win32_UI_Controls", 
  "Win32_UI_HiDpi", 
  "Win32_UI_WindowsAndMessaging", 
  "Win32_Graphics_Dwm", 
  "Win32_Graphics_Gdi", 
  "Win32_System_LibraryLoader", 
  "Win32_System_SystemServices", 
  "Win32_UI_Input", 
  "Win32_UI_Input_KeyboardAndMouse", 
  "Win32_UI_Shell_Common", 
  "Win32_UI_Shell_PropertiesSystem"
]
