[package]
name = "example-sys"
version = "0.1.0"
readme.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0"

[dependencies.win64-sys]
version = "*"
path = "../../libs/win64-sys"
