[package]
name = "win64-extra"
version = "0.1.0"
readme.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
bitflags = "2.9"
thiserror = "2.0"

# Standard windowing types for compatibility with other windowing libraries
cursor-icon    = "1.1"
dpi            = "0.1"
keyboard-types = "0.8"

[dependencies.win64-macro]
version = "0.1"
path = "../win64-macro"

[dependencies.windows]
version  = "0.61"
features = [
  "UI_ViewManagement", 
  "Win32_Devices_HumanInterfaceDevice", 
  "Win32_Foundation", 
  "Win32_Security", 
  "Win32_System_SystemInformation", 
  "Win32_System_Threading", 
  "Win32_UI_Accessibility", 
  "Win32_UI_Controls", 
  "Win32_UI_HiDpi", 
  "Win32_UI_WindowsAndMessaging", 
  "Win32_Graphics_Dwm", 
  "Win32_Graphics_Gdi", 
  "Win32_System_LibraryLoader", 
  "Win32_System_SystemServices", 
  "Win32_UI_Input", 
  "Win32_UI_Input_KeyboardAndMouse", 
  "Win32_UI_Shell_Common", 
  "Win32_UI_Shell_PropertiesSystem"
]
