[package]
name = "win64-macro"
version = "0.2.0"
rust-verison = "1.88"
description = "A set of procedural macros for win64"
readme.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn          = { version = "2.0", features = ["full"] }
quote        = "1.0"
proc-macro2  = "1.0"
convert_case = "0.8"