[package]
name = "win64"
version = "0.1.0"
readme.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[features]
default = ["safe"]
safe    = []
rwh_05  = ["dep:rwh_05"]
rwh_06  = ["dep:rwh_06"]

[dependencies]
bitflags   = "2.9"
strum      = { version = "0.27", features = ["derive"] }
thiserror  = "2.0"
libloading = "0.8"

# Standard windowing types for compatibility with other windowing libraries
cursor-icon    = "1.1"
dpi            = "0.1"
keyboard-types = "0.8"
# widestring     = "1.2"

rwh_05 = { package = "raw-window-handle", version = "0.5", features = ["std"], optional = true }
rwh_06 = { package = "raw-window-handle", version = "0.6", features = ["std"], optional = true }

[dependencies.win64-macro]
version = "0.1"
path    = "../win64-macro"

[dependencies.windows-sys]
version  = "0.60"
features = [
  # "UI_ViewManagement", # UWP api, so sadly can't use :(
  "Win32_Devices_HumanInterfaceDevice", 
  "Win32_Foundation", 
  "Win32_Security", 
  "Win32_System_SystemInformation", 
  "Win32_System_Threading", 
  "Win32_UI_Accessibility", 
  "Win32_UI_Controls", 
  "Win32_UI_HiDpi", 
  "Win32_UI_WindowsAndMessaging", 
  "Win32_Graphics_Dwm", 
  "Win32_Graphics_Gdi", 
  "Win32_System_LibraryLoader", 
  "Win32_System_SystemServices", 
  "Win32_UI_Input", 
  "Win32_UI_Input_KeyboardAndMouse", 
  "Win32_UI_Shell_Common", 
  "Win32_UI_Shell_PropertiesSystem"
]

# I would like to strip this out eventually, but error codes are a practically infinite amount of work.
[dependencies.windows-result]
version = "0.3"

# For dark mode detection
[dependencies.windows-registry]
version = "0.5"
